--- a/Asklepios.Web/src/assets/main.css
+++ b/Asklepios.Web/src/assets/main.css
@@ -1,7 +1,8 @@
 @import "./base.css";
 
 body {
-  background-color: #101010;
+  /*background-color: #101010;*/
+  background-color: #2f606a;
 }
 
 .gap {
