--- a/Asklepios.Web/src/assets/base.css
+++ b/Asklepios.Web/src/assets/base.css
@@ -14,6 +14,7 @@
     --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
     --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
     --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
+    --vt-c-divider-dark-3: #F5F5F5;
   
     --vt-c-text-light-1: var(--vt-c-indigo);
     --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
@@ -47,7 +48,7 @@
       --color-border-hover: var(--vt-c-divider-dark-1);
   
       --color-heading: var(--vt-c-text-dark-1);
-      --color-text: var(--vt-c-text-dark-2);
+      --color-text: var(--vt-c-text-dark-1);
     }
   }
   
